--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -62,7 +62,7 @@ footer {
       height: 120%;
       border-right: 3px solid white;
       border-radius: 50%;
-      animation: loader 3s linear infinite reverse;
+      animation: loader 3s linear infinite normal;
       
     }
     svg {
