--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -89,7 +89,7 @@
       border-top: 1px solid $color6_2;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
+      justify-content: flex-start;
       align-items: center;
       overflow-x: hidden;
 
@@ -100,6 +100,7 @@
         background-color: $color3;
         position: absolute;
         z-index: -1;
+        top: 19%;
         border-radius: 50%;
       }
 
